adding see also links
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@450 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/help/2addu.html
+++ b/vmb/src/mmixide/help/2addu.html
@@ -42,5 +42,5 @@ of size 2, 4, 8 or 16 byte.
   <p>
 <B>See also:</B>
 <p>
-ADDU  and LDA..
+<a href="unsigned.html">ADDU</a>  and <a href="lda.html">LDA</a>.
 
