--- a/vmb/src/mmixide/help/cset.html
+++ b/vmb/src/mmixide/help/cset.html
@@ -71,5 +71,5 @@ for the value $Y and conditional execute the assignment.
   <p>
 <B>See also:</B>
 <p>
-<a href="#Branches">Branches</a>.
+<a href="branch.html">Branches</a>.
 
