--- a/vmb/src/mmixide/help/go.html
+++ b/vmb/src/mmixide/help/go.html
@@ -35,7 +35,7 @@ The address of the next instruction is stored as return address in $X.
 The instruction can be used to link subroutines or coroutines.
   <p>
 <B>See also:</B>
-<p><a href="#PUSHGO">PUSHGO</a>, <a href="#GETA">GETA</a>,
-<a href="#LDA">LDA</a>, <a href="#PREGO">PREGO</a>
+<p><a href="pushj.html">PUSHGO</a>, <a href="geta.html">GETA</a>,
+<a href="lda.html">LDA</a>, <a href="preld.html">PREGO</a>
                                                                
 
