--- a/vmb/src/mmixide/help/inch.html
+++ b/vmb/src/mmixide/help/inch.html
@@ -39,7 +39,7 @@ to $X.
   <p>
 <B>See also:</B>
 <p>
-<a href="#ORH">ORH</a>, <a href="#ANDNH">ANDNH</a>, and <a href="#SETH">SETH</a>.
+<a href="orh.html">ORH</a>, <a href="orh.html">ANDNH</a>, and <a href="seth.html">SETH</a>.
                                                                                                     
 
    </td></tr>
