--- a/vmb/src/mmixide/help/is.html
+++ b/vmb/src/mmixide/help/is.html
@@ -23,5 +23,5 @@ The IS instruction can be used to define names for registers.
 <p>
 <B>See also:</B>
 <p>
-<a href="#PREFIX">PREFIX</a> .
+<a href="prefix.html">PREFIX</a> .
 
