--- a/vmb/src/mmixide/help/lda.html
+++ b/vmb/src/mmixide/help/lda.html
@@ -38,7 +38,7 @@ operands.
 
   <p>
 <B>See also:</B>
-<a href="#ADDU">ADDU</a>,
-<a href="#16Bit_Immediate">Bitwise Operations with 16-Bit Immediate Values</a>.
+<a href="unsigned.html">ADDU</a> and
+<a href="2addu.html">Bitwise Operations with 16-Bit Immediate Values</a>.
 
 
