--- a/vmb/src/mmixide/help/ldb.html
+++ b/vmb/src/mmixide/help/ldb.html
@@ -45,6 +45,6 @@ and for wydes a multiple of 2.
   <p>
 <B>See also:</B>
 <p>
-<a href="#Unsigned_Load">Loading Unsigned Data</a>. 
+<a href="ldbu.html">Loading Unsigned Data</a>. 
 
 
