--- a/vmb/src/mmixide/help/ldbu.html
+++ b/vmb/src/mmixide/help/ldbu.html
@@ -48,5 +48,5 @@ and for wydes a multiple of 2.
 
 <B>See also:</B>
 <p>
-<a href="#Signed_Load">Loading Signed Integers</a>.
+<a href="ldb.html">Loading Signed Integers</a>.
 
