--- a/vmb/src/mmixide/help/ldht.html
+++ b/vmb/src/mmixide/help/ldht.html
@@ -33,6 +33,6 @@ The address A is rounded down, if necessary, to be a multiple of 4.
 <p>
 <B>See also:</B>
 <p>
-<a href="#STHT">STHT</a> and <a href="#LDT">LDT</a>.
+<a href="stht.html">STHT</a> and <a href="ldb.html">LDT</a>.
 
 
