--- a/vmb/src/mmixide/help/ldsf.html
+++ b/vmb/src/mmixide/help/ldsf.html
@@ -36,6 +36,6 @@ the 64-bit floating point format is done.
   <p>
 <B>See also:</B>
 <p>
-<a href="#LDT">LDT</a> and <a href="#STT">STT</a> (for 32-bit fixed point numbers).
+<a href="ldb.html">LDT</a> and <a href="stb.html">STT</a> (for 32-bit fixed point numbers).
 
 
