--- a/vmb/src/mmixide/help/ldunc.html
+++ b/vmb/src/mmixide/help/ldunc.html
@@ -32,7 +32,7 @@ the cache.
   <p>
 <B>See also:</B>
 <p>
-<a href="#LDO">LDO</a> and <a href="#STO">STO</a>.
+<a href="ldb.html">LDO</a> and <a href="stb.html">STO</a>.
 
 
 
