--- a/vmb/src/mmixide/help/local.html
+++ b/vmb/src/mmixide/help/local.html
@@ -23,7 +23,7 @@ to 32, since registers with smaller numbers are never global.
 <p>
 <B>See also:</B>
 <p>
-<a href="#PUSHJ">PUSHJ</a> 
+<a href="pushj.html">PUSHJ</a> 
 
 
 
