--- a/vmb/src/mmixide/help/pushj.html
+++ b/vmb/src/mmixide/help/pushj.html
@@ -64,8 +64,8 @@ PUSHGO: 3&upsilon;
   <p>
 <B>See also:</B>
 <p>
-<a href="#POP">POP</a> and
-  <br><a href="#GO">GO</a> 
+<a href="pop.html">POP</a> and
+  <br><a href="go.html">GO</a> 
 
 
 
