--- a/vmb/src/mmixide/help/seth.html
+++ b/vmb/src/mmixide/help/seth.html
@@ -44,7 +44,7 @@ The instruction SET $X,$Y is assembled as  OR $X,$Y,0.
   <p>
 <B>See also:</B>
 <p>
-<a href="#16Bit_Immediate">Bitwise Operations with 16-Bit Immediate Operands</a> 
-  and <a href="#INCH">INCH</a> .
+<a href="orh.html">Bitwise Operations with 16-Bit Immediate Operands</a> 
+  and <a href="inch.html">INCH</a> .
 
 
