--- a/vmb/src/mmixide/help/shortfloat.html
+++ b/vmb/src/mmixide/help/shortfloat.html
@@ -38,7 +38,7 @@ The Y-operand may contain a rounding mode similar to the FLOT instruction.
   <p>
 <B>See also:</B>
 <p>
-<a href="#FLOT">FLOT</a> and <a href="#FLOTU">FLOTU</a>.
+<a href="flot.html">FLOT</a> and <a href="flot.html">FLOTU</a>.
                                                                                                     
 
 
