--- a/vmb/src/mmixide/help/stbu.html
+++ b/vmb/src/mmixide/help/stbu.html
@@ -46,6 +46,6 @@ and for wydes a multiple of 2.
 
 <B>See also:</B>
 <p>
-<a href="#Signed_Store">Storing Signed Integers</a>.
+<a href="stb.html">Storing Signed Integers</a>.
                                                                                                     
 
