--- a/vmb/src/mmixide/help/stht.html
+++ b/vmb/src/mmixide/help/stht.html
@@ -31,6 +31,6 @@ The address A is rounded down, if necessary, to be a multiple of 4.
   <p>
 <B>See also:</B>
 <p>
-<a href="#LDHT">LDHT</a> and
-<a href="#STT">STT</a>.
+<a href="ldht.html">LDHT</a> and
+<a href="stb.html">STT</a>.
 
