--- a/vmb/src/mmixide/help/trap.html
+++ b/vmb/src/mmixide/help/trap.html
@@ -35,7 +35,7 @@ at address rT.
   <p>
 <B>See also:</B>
 <p>
-<a href="#TRIP">TRIP</a> and <a href="#RESUME">RESUME</a>
+<a href="trip.html">TRIP</a> and <a href="resume.html">RESUME</a>
                                                                
 
 
