--- a/vmb/src/mmixide/help/trip.html
+++ b/vmb/src/mmixide/help/trip.html
@@ -34,5 +34,5 @@ Causes a Trip interrupt and jumps to the Trip handler at address #00.
   <p>
 <B>See also:</B>
 <p>
-<a href="#TRAP">TRAP</a> and <a href="#RESUME">RESUME</a>
+<a href="trap.html">TRAP</a> and <a href="resume.html">RESUME</a>
                                                                
