--- a/vmb/src/mmixide/help/resume.html
+++ b/vmb/src/mmixide/help/resume.html
@@ -25,7 +25,7 @@ Undoes the effect of a previous TRIP or TRAP instruction.
   <p>
 <B>See also:</B>
 <p>
-<a href="#TRIP">TRIP</a> and <a href="#TRAP">TRAP</a>
+<a href="trip.html">TRIP</a> and <a href="trap.html">TRAP</a>
                                                                
 
 
