--- a/vmb/src/mmixide/help/stb.html
+++ b/vmb/src/mmixide/help/stb.html
@@ -46,5 +46,5 @@ and for wydes a multiple of 2.
   <p>
 <B>See also:</B>
 <p>
-<a href="#Unsigned_Store">Storing Unsigned Data</a>.
+<a href="stbu.html">Storing Unsigned Data</a>.
 
