--- a/vmb/src/mmixide/help/unsigned.html
+++ b/vmb/src/mmixide/help/unsigned.html
@@ -6,6 +6,10 @@
 <h4><a name="Unsigned_Arithmetic" id="Unsigned_Arithmetic">Unsigned Arithmetic</a></h4>
 <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
 	<param name="Keyword" value="Unsigned Arithmetic">
+	<param name="Keyword" value="ADDU">
+	<param name="Keyword" value="SUBU">
+	<param name="Keyword" value="MULU">
+	<param name="Keyword" value="DIVU">
 </OBJECT>
 
 <B>Name:</B>
