improved contex help, registering subwindows, update of image in editor tabs
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@472 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/help/debugger/debugoptions.html
+++ b/vmb/src/mmixide/help/debugger/debugoptions.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
+<body>
 	<h3>The MMIX Debugger Options</h3>
 	<p><img src="debugoptions.jpg" alt="" height="433" width="555" border="0"></p>
 	<p></p>
