--- a/vmb/src/mmixide/help/debugger/inspector.html
+++ b/vmb/src/mmixide/help/debugger/inspector.html
@@ -2,6 +2,7 @@
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
+<body>
 <h3>The MMIX Inspector and Data Editor</h3>
 The MMIX insprector windows allow the inspection of memory locations and registers.
 
@@ -52,5 +53,5 @@ The MMIX insprector windows allow the inspection of memory locations and registe
 	<p>Unlike an inspector, the data editor will display just the data selected by the double click; that is, at most one Octa. Of course, the chunk size can be made smaller later on, for example to split an Octa into four Wydes as shown above. </p>
 	<p>The data is displayed in a number of edit boxes, that can be altered as usual, as long as they conform to the specified format.  </p>
 	<p></p>
-	<h4></h4>
+
 </body>
