--- a/vmb/src/mmixide/help/mmixide.html
+++ b/vmb/src/mmixide/help/mmixide.html
@@ -2,6 +2,7 @@
 <title>Help for MMIXIDE</title>
 <link rel="stylesheet" type="text/css" href="mmixide.css">
 </head>
+<body>
 
 <center>
 
@@ -20,15 +21,20 @@
 <ul>
 <li>MMIX
 	<ul>
-	<li><a href="instructions.html">The MMIX instruction set</a>
-	<li>The MMIX Debugger
+	<li><a href="instructions/index.html">The MMIX Instruction Set</a>
+	<li><a href="debugger/index.html">The Debugger</a>
+	<li><a href="debugger/inspector.html">The Inspector and Data Editor</a>
 	<li>The Build system
 	</ul>
 <li>The User Interface
 	<ul>
-	<li>Splitter bars
+	<li><a href="splitter/index.html">Splitter Bars</a>
 	<li>Menus
 	<li>Options
+	   <ul>
+		<li><a href="debugger/debugoptions.html">Debugger Options</a>
+	  </ul>
 	<li>Editor
 	</ul>
 </ul>	
+</body>
