renaming debugger.html to index.html
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@474 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/help/debugger/index.html
+++ b/vmb/src/mmixide/help/debugger/index.html
@@ -2,7 +2,8 @@
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
-<h3>The MMIX Debugger</h3>
+<body>
+<h2>The MMIX Debugger</h2>
 If an MMIX source file is in the editor, you can start
 the MMIX simulator in debugging mode 
 either by
