renaming splitter.html to index.html
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@475 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/help/splitter/index.html
+++ b/vmb/src/mmixide/help/splitter/index.html
@@ -2,7 +2,8 @@
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
-<h3>Splitter Bars</h3>
+<body>
+<h2>Splitter Bars</h2>
 Splitter bars are used to split a window into several
 window panes, each with its own content.
 
@@ -22,7 +23,7 @@ and in the center
 of the main region is the turn button (<img src="turn.png">)
 
 
-<h4>Draging a splitter bar</h4>
+<h3>Draging a splitter bar</h3>
 This is the simplest and most common operation. You
 can drag a horizontal splitter bar up or down and
 a vertical splitter bar right or left.
@@ -37,7 +38,7 @@ splitter bar.
 <li> release the mouse button.
 </ul>
 
-<h4>Turning the splitter bar</h4>
+<h3>Turning the splitter bar</h3>
 You can turn the splitter bar counter clock wise by 90 degree.
 Doing this four times will bring the splitter bar back to its initial
 position.
@@ -49,7 +50,7 @@ To do so:
 <li> Double click the left mouse button.
 </ul>
 
-<h4>Moving a window pane</h4>
+<h3>Moving a window pane</h3>
 You can move a window pane to any position inside the window
 using one of the move buttons in the end regions. The move button 
 is a small triangle pointing to one of the adjacent window panes;
@@ -93,7 +94,7 @@ but is quite intuitive to use. Just try it!)
 </ul>
 
 
-<h4>Closing one of the adjacent window panes</h4>
+<h3>Closing one of the adjacent window panes</h3>
 You can close either of the adjacent window panes by using
 one of the close buttons. The move button next to the close button
 points to the affected window pane.
