adding font support improving the data edit frame, still errors when scrolling memory or registers with highlighting
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@478 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/help/debugger/index.html
+++ b/vmb/src/mmixide/help/debugger/index.html
@@ -2,7 +2,6 @@
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
-<body>
 <h2>The MMIX Debugger</h2>
 If an MMIX source file is in the editor, you can start
 the MMIX simulator in debugging mode 
@@ -33,10 +32,7 @@ the commands that you find in the MMIX menu.
 	<p></p>
 	<h4>Running, Stopping, and Stepwise Execution</h4>
 	<ul>
-		<li><font color="gray"><img src="debug.gif" alt="" height="24" width="24" border="2"> </font>Debugg/Continue<br>
-			Continue execution instructions until a breakpoint or the end
-of the Program is reached.
-			<p>
+		<li><font color="gray"><img src="debug.gif" alt="" height="24" width="24" border="2"> </font>Debugg/Continue<br>Continue execution instructions until a breakpoint or the end of the Program is reached. This function can also be invoked by pressing the F5 key.<p>
 		<li><font color="gray"><img src="stepin.gif" border=2></font> Step Instruction<br>
 Execute one instruction and stop again.
 <p>
@@ -80,16 +76,5 @@ instruction is executed (unless a breakpoint or the end of the program intervene
 			Tracepoint exampe:<font color="gray"><img src="traceline.gif" align="absmiddle" border=2 hspace="20"></font>
 			<p>
 	</ul>
-
-
-
-
-
-
-		
-			
-		
-			
-		
 		
 </body>
