--- a/vmb/src/mmixide/help/options/index.html
+++ b/vmb/src/mmixide/help/options/index.html
@@ -2,8 +2,22 @@
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
-	<h3>The MMIX Options</h3>
-	<p>The Options Menu contains these enties:</p>
+	<h2>Options</h2>
+	<Object>
+	<param name="Keyword" value="Options">
+	<param name="Keyword" value="Editor Options">
+	<param name="Keyword" value="Assembler Options">
+	<param name="Keyword" value="Debugger Options">
+	<param name="Keyword" value="Run Options">
+	<param name="Keyword" value="Symbol Table Options">
+	<param name="Keyword" value="Sources Options">
+	<param name="Keyword" value="Encoding Options">
+	<param name="Keyword" value="UTF Encoding">
+	<param name="Keyword" value="ASCII Encoding">
+
+</OBJECT>
+
+	<p>The Options Menu contains these entries:</p>
 	<ul>
 		<li><a href="editor.html">Editor ...</a>
 		<li><a href="assembler.html">Assembler ...</a>
@@ -17,7 +31,7 @@
 				
 			</ul>
 			<ul>
-				<li>UTF8 and 
+				<li>UTF-8 and 
 				<li>ASCII. 
 			</ul>
 		
