finishing version 1.0 of mmixvd
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@481 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/help/debugger/index.html
+++ b/vmb/src/mmixide/help/debugger/index.html
@@ -2,6 +2,25 @@
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Debugger">
+	<param name="Keyword" value="MMIX Simulator">
+	<param name="Keyword" value="F5">
+	<param name="Keyword" value="Debug Button">
+	<param name="Keyword" value="Continue Button">
+	<param name="Keyword" value="Assembler">
+	<param name="Keyword" value="Step Instruction">
+	<param name="Keyword" value="PUSHJ">
+	<param name="Keyword" value="PUSHGO">
+	<param name="Keyword" value="Step Over">
+	<param name="Keyword" value="Step Out">
+	<param name="Keyword" value="Interrupt Execution">
+	<param name="Keyword" value="Halt Execution">
+	<param name="Keyword" value="Execute Breakpoint">
+	<param name="Keyword" value="Read Breakpoint">
+	<param name="Keyword" value="Write Breakpoint">
+	<param name="Keyword" value="Tracepoint">
+</OBJECT>
 <h2>The MMIX Debugger</h2>
 If an MMIX source file is in the editor, you can start
 the MMIX simulator in debugging mode 
