--- a/vmb/src/mmixide/help/debugger/inspector.html
+++ b/vmb/src/mmixide/help/debugger/inspector.html
@@ -2,7 +2,24 @@
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
-<body>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Inspector">
+	<param name="Keyword" value="Memory">
+	<param name="Keyword" value="Register">
+	<param name="Keyword" value="Data Editor">
+	<param name="Keyword" value="Address">
+	<param name="Keyword" value="Hexadecimal">
+	<param name="Keyword" value="ASCII">
+	<param name="Keyword" value="Unsigend">	
+	<param name="Keyword" value="Signed">	
+	<param name="Keyword" value="Float">	
+	<param name="Keyword" value="Byte">	
+	<param name="Keyword" value="Wyde">
+	<param name="Keyword" value="Tetra">	
+	<param name="Keyword" value="Octa">	
+	<param name="Keyword" value="Load">	
+	<param name="Keyword" value="Store">	
+</OBJECT>
 <h3>The MMIX Inspector and Data Editor</h3>
 The MMIX insprector windows allow the inspection of memory locations and registers.
 
