--- a/vmb/src/mmixide/help/options/debugger.html
+++ b/vmb/src/mmixide/help/options/debugger.html
@@ -1,6 +1,27 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Debugger Options">
+	<param name="Keyword" value="Debugger Windows">
+	<param name="Keyword" value="Memory">
+	<param name="Keyword" value="Register">
+	<param name="Keyword" value="Inspector">
+	<param name="Keyword" value="Text segment">
+	<param name="Keyword" value="Data segment">
+	<param name="Keyword" value="Stack segment">
+	<param name="Keyword" value="Pool segment">
+	<param name="Keyword" value="Tracing">
+	<param name="Keyword" value="Local registers">
+	<param name="Keyword" value="Register stack">
+	<param name="Keyword" value="Global registers">
+	<param name="Keyword" value="Special registers">
+	<param name="Keyword" value="Trace Window">
+	<param name="Keyword" value="Break at Main">
+	<param name="Keyword" value="Main">
+	<param name="Keyword" value="Break after instruction">
+	<param name="Keyword" value="Break before instruction">
+</OBJECT>
 <body>
 	<h3>The MMIX Debugger Options</h3>
 	<p><img src="debugger.png" alt="" border="0"></p>
