--- a/vmb/src/mmixide/help/options/editor.html
+++ b/vmb/src/mmixide/help/options/editor.html
@@ -1,6 +1,13 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Editor Options">
+	<param name="Keyword" value="Allways save changed files">
+	<param name="Keyword" value="Line numbers">
+	<param name="Keyword" value="Profile">
+	<param name="Keyword" value="Tabulator size">
+</OBJECT>
 <body>
 	<h3>The MMIX Editor Options</h3>
 	<p><img src="editor.png" alt="" border="0"></p>
