--- a/vmb/src/mmixide/help/options/run.html
+++ b/vmb/src/mmixide/help/options/run.html
@@ -1,6 +1,21 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Run Options">
+	<param name="Keyword" value="Main">
+	<param name="Keyword" value="Argument count">
+	<param name="Keyword" value="argc">
+	<param name="Keyword" value="Pool segment">
+	<param name="Keyword" value="Argument vector">
+	<param name="Keyword" value="argv">
+	<param name="Keyword" value="Register $0">
+	<param name="Keyword" value="Register $1">
+	<param name="Keyword" value="Standard Input">
+	<param name="Keyword" value="StdIn">
+	<param name="Keyword" value="Fake StdIn">
+	<param name="Keyword" value="Command line">
+</OBJECT>
 <body>
 	<h3>The MMIX Run Options</h3>
 	<p><img src="run.png" alt="" border="0"></p>
