--- a/vmb/src/mmixide/help/options/sources.html
+++ b/vmb/src/mmixide/help/options/sources.html
@@ -1,6 +1,21 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Sources Options">
+	<param name="Keyword" value="Single source file">
+	<param name="Keyword" value="Multiple source files">
+	<param name="Keyword" value="Load single file">
+	<param name="Keyword" value="Load multiple files">
+	<param name="Keyword" value="Add file">
+	<param name="Keyword" value="File Tabs">
+	<param name="Keyword" value="Editor">
+	<param name="Keyword" value="Assemble File">
+	<param name="Keyword" value="Load File">
+	<param name="Keyword" value="Symbol table">
+	<param name="Keyword" value="Full file name">
+	<param name="Keyword" value="Execute command">
+</OBJECT>
 <body>
 	<h3>The MMIX Sources Options</h3>
 	<p><img src="source.png" alt="" border="0"></p>
