--- a/vmb/src/mmixide/help/splitter/index.html
+++ b/vmb/src/mmixide/help/splitter/index.html
@@ -1,7 +1,14 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
-<body>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Splitter Bar">
+	<param name="Keyword" value="Window pane">
+	<param name="Keyword" value="Dragging splitter bars">
+	<param name="Keyword" value="Turning splitter bars">
+	<param name="Keyword" value="Moving window panes">
+	<param name="Keyword" value="Closing window panes">
+</OBJECT>
 <body>
 <h2>Splitter Bars</h2>
 Splitter bars are used to split a window into several
