--- a/vmb/src/mmixide/help/options/symbols.html
+++ b/vmb/src/mmixide/help/options/symbols.html
@@ -1,12 +1,22 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
-<body>
+<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+	<param name="Keyword" value="Symbol Table">
+	<param name="Keyword" value="Symbol Table Options">
+	<param name="Keyword" value="Local symbol">
+	<param name="Keyword" value="Show locals">
+	<param name="Keyword" value="Global symbols">
+	<param name="Keyword" value="Small values">
+	<param name="Keyword" value="Registers">
+	<param name="Keyword" value="Show Registers">
+	<param name="Keyword" value="Show small values">
+</OBJECT><body>
 	<h3>The MMIX Symbol Table Options</h3>
 	<p><img src="symbols.png" alt="" border="0"></p>
 	<p></p>
 	<p>You reach the MMIX symbols options through the Options menu.</p>
-	<p>Even mid-sized MMIX programs contain large numbers of symbols, that can be shown in the symbol table window. To select which symbols you want to see here, there are three check boxes. Symbol table support is currently not yet perfect. But you can open a symbol table view and scroll any symbol into the edit window by clicking on it.</p>
+	<p>Even mid-sized MMIX programs contain large numbers of symbols, that can be shown in the <a href="../debugger/symbols.html">symbol table window</a>. To select which symbols you want to see here, there are three check boxes. Symbol table support is currently not yet perfect. But you can open a symbol table view and scroll any symbol into the edit window by clicking on it.</p>
 	<h4>Show Locals</h4>
 	<p>A simple heuristic is used to determine what is a local smbol: global symbols contain only a single colon as the first character. This first caracter is usually not shown.</p>
 	<p>If this box is checked, local symbols (containing more than one colon) are shown.</p>
