--- a/vmb/src/mmixide/help/options/debugger.html
+++ b/vmb/src/mmixide/help/options/debugger.html
@@ -20,22 +20,19 @@
 	<param name="Keyword" value="Break at Main">
 	<param name="Keyword" value="Main">
 	<param name="Keyword" value="Break after instruction">
-	<param name="Keyword" value="Break before instruction">
+	<param name="Keyword" value="Enable stack tracing">
+	<param name="Keyword" value="Trace exceptions">
+	<param name="Keyword" value="Arithmetic exceptions">
+	<param name="Keyword" value="Warn if no application">
+	<param name="Keyword" value="Auto-Close debug windows">
 </OBJECT>
 <body>
 	<h3>The MMIX Debugger Options</h3>
-	<p><img src="debugger.png" alt="" border="0"></p>
+	<p><img src="debugoptions.jpg" alt="" border="0"></p>
 	<p></p>
 	<p>You reach the MMIX debugger options through the Options menu.
 	</p>
-	<h4>Inspecting Registers and Memory</h4>
-	In the two boxes on top of the dialog, you can select windows that 
-	should open automatically when you start the debugger. 
-	In the example above, the window showing the local registers and the 
-	register stack will open; further a windows showing the Data Segment 
-	and one showing the Pool Segment. All the other windows, for example 
-	one for the global registers, can be opened manually when needed.
-	<h4>Choosing Special Registers for display<img src="specials.png" alt="" align="right" hspace="20"></h4>
+	<h4>Inspecting Registers and Memory</h4>In the two boxes on top of the dialog, you can select windows that should open automatically when you start the debugger. In the example above, the window showing the local registers and the register stack will open; further a windows showing the Data Segment. All the other windows, for example one for the global registers, can be opened manually when needed.<h4>Choosing Special Registers for display<img src="specials.png" alt="" align="right" hspace="20"></h4>
 	<p>
 	Next to the checkbox for the special registers is a Choose button. 
 	Pressing it opens a dialog where you can choose which registers to 
@@ -46,25 +43,53 @@
 	</p>
 	<h4>Customizing Tracing</h4>
 	<ul>
-	<li>Show Trace: If the checkbox is selected, the trace window will open and 
-	a detailed trace of the instructions is printed when the program stops or hits 
-	a tracepoint. Otherwise, the program will run silent.
-	<p>
-	<li>Break at Main: If theis checkbox is selected, a breakpoint is 
-		added automaticaly at <tt>Main</tt>. So it will stop as soon as it 
-		enters the Main program.
-		<P>
-		<li>Break after instruction or before instruction: Here you can 
-		select whether the program stops before or after executing the 
-		instruction. This applies to breakpoints as well as to single stepping. 
-		<p>
+	<li>Show Trace: <br>
+			If the checkbox is selected, the trace window will open and a detailed trace of the instructions is printed when the program stops or hits a tracepoint. Otherwise, the program will run silent.
+			<p>
+	<li>Break at Main: <br>
+			If this checkbox is selected, a breakpoint is added automaticaly 
+			at <tt>Main</tt>. So the program will stop as soon as it enters the 
+			Main program.
+			<P>
+	<li>Break after instruction: or<br>
+	<li>Break before instruction:<br> 
+			Here you can select whether the program stops before or 
+			after executing the instruction. 
+			This applies to breakpoints as well as to single stepping.
+			<p>
 			The &quot;classic&quot; behaviour of the MMIX debuger is to 
 			stop after the instruction, so that you can see in the trace 
 			what the instruction just has done.
 			<p>
 			Other source code debuggers (for example gdb) usualy stop 
-			before executing the instruction. This has the advantage, that you can inspect registers and memory before the instruction, that advance the program to the next instruction and see the changes. It can also be convenient to stop at a branch instruction before it gets executet and then see where it will take the machine.
-		<P>
-		
+			before executing the instruction. This has the advantage, 
+			that you can inspect registers and memory before the instruction, 
+			that advance the program to the next instruction and see the changes. 
+			It can also be convenient to stop at a branch instruction before it 
+			gets executet and then see where it will take the machine.
+			<P>
+    <li>Enable stack tracing:<br>
+    If this box is checked, the trace will show details of the hidden register stack
+     while tracing. This is equivalent to the -r option of the mmix simulator.
+     <p>
+	<li>Trace exceptions:<img src="exceptions.jpg" alt="" height="279" width="375" align="right" border="0" hspace="20"><br>
+			If this boy is checked, all instructions that cause an arithmetic 
+			exception will be shown in the trace. This is equivalent to the -e 
+			option of the mmix simulator. 
+			<p>
+			If this box is unchecked, no such information is given. 
+			<p>
+			If the box is shaded, a subset of the eight possible arithmetic 
+			exceptions has be selected for tracing. To change the set of traced 
+			exceptions press the Choose button to the right. A window will open 
+			that lets you select or deselect the various arithmetic exceptions 
+			for tracing.
+			<p>
+	<li>Warn if no application:<br>
+	If this box is checked, the debugger will issue a warning message 
+	when you try to start a program, but no file is selected for loading into memory.
+	To select a file for loading, or change this selection use the <a href="sources.html">Sources Dialog Box</a>.
+	<p>
+	<li> The Auto-Close feature for the debug windows is not yet implemented.
 	</ul>
 </body>
