fixed bug in opening HtmlHelp keyword lookup
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@514 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/help/debugger/inspector.html
+++ b/vmb/src/mmixide/help/debugger/inspector.html
@@ -13,10 +13,10 @@
 	<param name="Keyword" value="Unsigend">	
 	<param name="Keyword" value="Signed">	
 	<param name="Keyword" value="Float">	
-	<param name="Keyword" value="Byte">	
-	<param name="Keyword" value="Wyde">
-	<param name="Keyword" value="Tetra">	
-	<param name="Keyword" value="Octa">	
+	<param name="Keyword" value="Byte Display">	
+	<param name="Keyword" value="Wyde Display">
+	<param name="Keyword" value="Tetra Display">	
+	<param name="Keyword" value="Octa Display">	
 	<param name="Keyword" value="Load">	
 	<param name="Keyword" value="Store">	
 </OBJECT>
