changing the editor key bindings and adding help for it
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@515 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/help/mmixvd.html
+++ b/vmb/src/mmixide/help/mmixvd.html
@@ -32,7 +32,7 @@
 <li>MMIX
 	<ul>
 	<li><a href="instructions/index.html">The MMIX Instruction Set</a>
-	<li><a href="debugger/index.html">The Debugger</a>
+	<li><a href="debugger/index.html">Debugging</a>
 	<li><a href="debugger/inspector.html">Displaying and Editing Memory and Registers</a>
 	<li><a href="debugger/breaks.html">The Breakpoint Window</a>
 	<li><a href="debugger/symbols.html">The Symbol Table Window</a>
@@ -42,6 +42,10 @@
 	<li><a href="options/index.html">Options</a>
 	<li><a href="options/find.html">Find and Replace Dialog</a>
 	<li><a href="splitter/index.html">Splitter Bars</a>
+	<li>Editor
+	   <ul>
+		<li><a href="editor/keys.html">Key Bindings</a>
+	  </ul>
 	</ul>
 </ul>	
 </body>
