--- a/vmb/src/mmixide/help/mmixide.html
+++ b/vmb/src/mmixide/help/mmixide.html
@@ -6,7 +6,7 @@
 
 <center>
 
-<img src="..\Icons\mmixide256.png">
+<img src="../Icons/mmixide256.png">
 <p>
 <h1>The MMIX Integrated Development Environment</h1>
 </center>
