--- a/vmb/htdocs/index.html
+++ b/vmb/htdocs/index.html
@@ -19,27 +19,29 @@ source code and browse the CVS repository.
 Here you find documents, specifications for individual devices
 and links to ready to run binary examples.
 
-
+		<H2> Latest Version: 1.8 </H2>
+Win32 Setup file: <a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.7/setup_vmb_1_8.exe/download">setup_1_8-exe</a>
 		<H2> Device Documentation </H2>
 		<UL>
 <LI><a href="mother_help.html">mother</a> - the motherboard herself
-			<li><A HREF="serial_help.html">serial </A>- a simple serial
-communication device
+			<li><A HREF="serial_help.html">serial </A>- a simple serial communication device
 			<li><A HREF="winvram_help.html">winvram </A>- Framebuffer Device with Mouse and GPU
 
 			<LI><A HREF="timer_help.html">timer</A> - Timer Device to generate interrupts and get the current time and date.
-<LI><A HREF="led_help.html">led</A> - LEDs to turn on and off
+			<LI><A HREF="led_help.html">led</A> - LEDs to turn on and off
 			<li><a href="button_help.html">button</a> - push button sending interrupts to the system
 			
 			<li><a href="sevensegment_help.html">sevensegment</a> - a sevensegment display for numbers
+			<li><a href="sound_help.html">sound</a> - <strong>NEW:</strong> a sound card that plays PCM or MP3 data  (Win32)
 			<li><a href="screen_help.html">screen</a> - serial output device to display characters
 			<li><a href="keyboard_help.html">keyboard</a> - serial input device to read characters from the keyboard or from a File
-			<li><a href="disk_help.html">disk</a> - hard disk controler to read and write blocks in a disk (image).
+			<li><a href="disk_help.html">disk</a> - hard disk controller to read and write blocks in a disk (image).
 		
 			<li><a href="ram_help.html">RAM</a> - from 1 Byte to 4 GByte RAM
 			<li><a href="rom_help.html">ROM</a> - Read only memory defined by an image file 
 			<li><a href="flash_help.html">FLASH</a> - Read/Write memory made persistent through an image file
 			<li><a href="mmix_help.html">mmix</a> - the MMIX CPU
+			<li><a href="mmixide/index.html">MMIXIDE</a> -  <strong>NEW:</strong> the MMIX Integrated Development Envoronment (Win32)
 
 		</UL>
 		<h2>General Documentation</h2>
@@ -54,22 +56,65 @@ communication device
 				<li>Windows<br>
 					Currently, the simplest way to install the VMB devices is available for Windows users. <br>
 					Download the <strong>
-<a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.2/setup_vmb_1_2.exe/download">setup file</a></strong>, double click it, and you are done. <br>
-					If all goes well, it will start a simple configuration: from the file readme.vmb: a screen, a keyboard, a MMIX  CPU, a ROM, and a ROM&nbsp;image. The keyboard will initialy take input from the file readme.txt. The CPU will take instructions from ROM, and these will take input from the keyboard and send it to the screen. So you should see the readme file.
+<a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.7/setup_vmb_1_7.exe/download">setup file</a></strong>, 
+double click it, and you are done. <br>
+		If all goes well, it will start a simple
+					configuration: from the file
+					readme.vmb: a screen, a
+					keyboard, a MMIX CPU, a ROM,
+					and a ROM&nbsp;image. The
+					keyboard will initially take
+					input from the file
+					readme.txt. The CPU will take
+					instructions from ROM, and
+					these will take input from the
+					keyboard and send it to the
+					screen. So you should see the
+					readme file.
 <p>
-To compile the executables yourself, you need to download the sources (see below) and use Visual Studio. The sources contain the necessary project and solution files.
+<p>You can also load the executables individually from this 
+<a href="http://mmix.cs.hm.edu/exe/vmb">directory</a>.
+<p>
+To compile the executables yourself, you need to download the sources
+(see below) and use Visual Studio. The sources contain the necessary
+project and solution files.
 			</ul>
 		</div>
 		<ul>
 			<li>Linux<br>
-				Linux users have to compile the devices from sources.
-Either  obtained from cvs  (see: <strong><A HREF="http://sourceforge.net/projects/vmb/">
-http://sourceforge.net/projects/vmb/</A></strong>) or as a <strong><a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.1/source-1-1.tgz/download">tgz file</a></strong>. The sources come with Makefiles. If you have make and gcc, just execute make in the top source directory.
+				Linux users have to compile the
+devices from sources.  Either obtained from cvs
+(see: <strong><A HREF="http://sourceforge.net/projects/vmb/">
+http://sourceforge.net/projects/vmb/</A></strong>) or as
+a <strong><a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.5/src_1_5.tgz/download">tgzfile</a></strong>. 
+The sources come with Makefiles. If you have make
+and gcc, just execute make in the top source directory.
 		</ul>
+
+
+<h2>Known Bugs and Fixes</h2>
+<ul>
+<li>Currently, the support for OS X is not very good. But demand for this platform
+is increasing, and I hope to be able to take care of a basic working set of devices
+soon. For now, 
+<a href="VMBonOSX.eml">I post here an email to me</a> summarizing the current state of affairs.
+Any improvements or suggestions are welcome.
+
+</ul>
+
+
+
+
 		<h2>Examples</h2>
 		
 		
 		To avoid duplication of efforts, examples and binaries have moved to the <a
 		href="http://mmix.cs.hm.edu">MMIX Homepage</a>.
+
+
+
+
+
+
 	</BODY>
 </HTML>
