before moving to svn
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@581 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/vmb/src/mmixide/help/mmixide.html
+++ b/vmb/src/mmixide/help/mmixide.html
@@ -44,8 +44,8 @@
 	<li><a href="options/index.html">Options</a>
 	<li><a href="options/find.html">Find and Replace Dialog</a>
 	<li><a href="splitter/index.html">Splitter Bars</a>
-	<li>Menus
-	<li>Editor
+	<li>Menus (to be written)
+	<li>Editor (see also: www.scintilla.org)
 	   <ul>
 		<li><a href="editor/keys.html">Key Bindings</a>
 	  </ul>
