--- a/vmb/src/screen/help.html
+++ b/vmb/src/screen/help.html
@@ -70,7 +70,7 @@
 <tr> <td> help     <td> false<td>to print information</tr>
 </table>
 		<p>
-These can be set in default.mmc
+These can be set in default.vmb
 
 </p>
 	</BODY>
