--- a/vmb/src/sevensegment/help.html
+++ b/vmb/src/sevensegment/help.html
@@ -53,7 +53,7 @@
 <tr> <td> config   <td> not set<td>filename for a configuration file</tr>
 <tr> <td> help     <td> false<td>to print information</tr>
 </table>
-These can be set in default.mmc
+These can be set in default.vmb
 
 </BODY>
 </HTML>
