--- a/vmb/src/timer/help.html
+++ b/vmb/src/timer/help.html
@@ -108,7 +108,7 @@ The timer has the following configurable parameters:
 <tr> <td> config   <td> not set<td>filename for a configuration file</tr>
 <tr> <td> help     <td> false<td>to print information</tr>
 </table>
-These should be set in default.mmc
+These should be set in default.vmb
 Later versions of the timer device might specify a resolution, to change
 the units of ms, t, i, t0 and dt. Currently, only a millisecond timer is available.
 
