--- a/vmb/src/button/help.html
+++ b/vmb/src/button/help.html
@@ -1,10 +1,8 @@
 <HTML>
-
 	<head>
 		<meta http-equiv="content-type" content="text/html;charset=iso-8859-1">
 		<title>VMB Button Specification</title>
 	</head>
-
 	<BODY>
 		<H1>Button Specification </H1>
 		<h3>the GUI optins will work only under Win32</h3>
@@ -16,7 +14,7 @@
 		<p>The color of the button can be configured to be any 3 Byte RGB value (0xFF0000 is red, 0x00FF00 is green, and 0x0000FF is blue). Further, a label can be specified to be placed on the button.</p>
 		<h2>Configuration</h2>
 		
-		The Keyboard has the following configurable parameters:
+		The Button has the following configurable parameters:
 		<table>
 <tr> <td>host      <td> localhost <td>the host where the bus is located </tr>
 			<tr> <td>port      <td> 9002 <td> the port where the bus is located</tr>
