--- a/vmb/src/ram/help.html
+++ b/vmb/src/ram/help.html
@@ -29,7 +29,7 @@
 <tr> <td> help     <td> false<td>to print information</tr>
 </table>
 		
-These can be set in default.mmc
+These can be set in default.vmb
 
 </BODY>
 </HTML>
