--- a/vmb/src/rom/help.html
+++ b/vmb/src/rom/help.html
@@ -31,7 +31,7 @@
 <tr> <td> help     <td> false<td>to print information</tr>
 </table>
 		
-These can be set in default.mmc
+These can be set in default.vmb
 
 </BODY>
 </HTML>
