adding hostdist to index
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@597 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -34,7 +34,7 @@ file: <a href="http://sourceforge.net/projects/vmb/files/vmb/Version%201.9/setup
 <li><a href="screen_help.html">screen</a> - serial output device to display characters
 <li><a href="keyboard_help.html">keyboard</a> - serial input device to read characters from the keyboard or from a File
 <li><a href="disk_help.html">disk</a> - hard disk controller to read and write blocks in a disk (image).
-<li><a href="hostdisk_help.html">disk</a> - a pseudo hard disk to read and write files from the host system.
+<li><a href="hostdisk_help.html">hostdisk</a> - a pseudo hard disk to read and write files from the host system.
 <li><a href="ram_help.html">RAM</a> - from 1 Byte to 4 GByte RAM
 <li><a href="rom_help.html">ROM</a> - Read only memory defined by an image file
 <li><a href="flash_help.html">FLASH</a> - Read/Write memory made persistent through an image file
